Remove unused fields
